kubernetes-manifests/boat.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boat-bay
  labels:
    app: boat-bay
    tier: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: boat-bay
      tier: backend
  template:
    metadata:
      labels:
        app: boat-bay
        tier: backend
    spec:
      containers:
        - name: boat-bay
          image: boat-bay
          ports:
            - name: http
              containerPort: 8080
