kubernetes-manifests/boat-bay.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boat-bay
  labels:
    app: boat-bay
    tier: backend
spec:
  type: ClusterIP
  selector:
    app: boat-bay
    tier: backend
  ports:
    - port: 8080
      targetPort: http
